--- a/ChangeLog
+++ b/ChangeLog
@@ -113,6 +113,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * make: rozszerzenie dla modu³ów, w pliku spec: MODULE_MAKE_CMD - dodatkowa
   komenda wykonywana na koniec kompilowania modu³u, dok³adny odpowiednik
   MODULE_CONFIGURE_CMD (adrian)
+* make install: je¶li w katalogu z modu³em znajduje siê podkatalog "data" to
+  jest on instalowany jako $(datadir)/kadu/modules/data/<nazwa_modulu> (adrian)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
