--- a/ChangeLog
+++ b/ChangeLog
@@ -115,6 +115,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   MODULE_CONFIGURE_CMD (adrian)
 * make install: je¶li w katalogu z modu³em znajduje siê podkatalog "data" to
   jest on instalowany jako $(datadir)/kadu/modules/data/<nazwa_modulu> (adrian)
+* jednak wy³±czone znikanie kadu z paska zadañ (joi)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
