--- a/ChangeLog
+++ b/ChangeLog
@@ -126,6 +126,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   i saveGeometry) (joi)
 * patch Kida dotycz±cy odstêpów miêdzy komponentami w oknie "O programie" (joi)
 * pe³na obs³uga linków w oknie historii, ogólne porz±dki zwi±zane z tym (adrian)
+* linki w panelu informacyjnym (joi)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
