Poprawiony błąd podawania parametrów do configure
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2161 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -130,6 +130,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * graficzne emotikony w panelu informacyjnym i w historii (joi)
 * Instalator dodano obs³uge modu³ów zewnetrznych amarok, mail, filedesc
  i opis do Pomocy (Ron_K)
+* Instalator poprawiny b³±d podawania z³ych parametrów do configure (Ron_K)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
