--- a/ChangeLog
+++ b/ChangeLog
@@ -134,6 +134,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dymek w tray'u pokazuje siê tak¿e przed zmian± statusu (michal)
 * poprawione wy¶wietlanie emotikonów i obrazków w panelu + konfiguracja
   emotikonów (domy¶lnie wy³±czone) (joi)
+* przwrócone dzia³anie powiadomieñ po zmianach Vogela (joi)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
