--- a/ChangeLog
+++ b/ChangeLog
@@ -136,6 +136,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   emotikonów (domy¶lnie wy³±czone) (joi)
 * przwrócone dzia³anie powiadomieñ po zmianach Vogela (joi)
 * usuniêcie pojawiaj±cego siê czasem &nbsp; w panelu (joi)
+* Patch KID-a na menagera modu³ów (Ron_K)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
