--- a/ChangeLog
+++ b/ChangeLog
@@ -134,9 +134,10 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dymek w tray'u pokazuje siê tak¿e przed zmian± statusu (michal)
 * poprawione wy¶wietlanie emotikonów i obrazków w panelu + konfiguracja
   emotikonów (domy¶lnie wy³±czone) (joi)
-* przwrócone dzia³anie powiadomieñ po zmianach Vogela (joi)
+* przywrócone dzia³anie powiadomieñ po zmianach Vogela (joi)
 * usuniêcie pojawiaj±cego siê czasem &nbsp; w panelu (joi)
-* Patch KID-a na menagera modu³ów (Ron_K)
+* patch Kida: reorganizacja okna mened¿era modu³ów (Ron_K)
+* sprawdzenie danych osobistych nie wywraca Kadu (joi)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
