poprawki związane z &nbsp; w panelu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2180 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -138,6 +138,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniêcie pojawiaj±cego siê czasem &nbsp; w panelu (joi)
 * patch Kida: reorganizacja okna mened¿era modu³ów (Ron_K)
 * sprawdzenie danych osobistych nie wywraca Kadu (joi)
+* walki z &nbsp; ci±g dalszy ;) (adrian/joi)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
