--- a/ChangeLog
+++ b/ChangeLog
@@ -138,6 +138,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniêcie pojawiaj±cego siê czasem &nbsp; w panelu (joi)
 * patch Kida: reorganizacja okna mened¿era modu³ów (Ron_K)
 * sprawdzenie danych osobistych nie wywraca Kadu (joi)
+* walki z &nbsp; ci±g dalszy ;) (adrian/joi)
+* patch Kida: poprawione okno mened¿era modu³ów - od¶wie¿anie przy ³adowaniu
+  zale¿no¶ci + poprawka wygl±du (joi)
 * poprawienie wybierania sciezek do zestawow (dzwieki / ikonki)
   nalezy skasowac sobie wszystkie wpisy z "sciezki do ikon" 
   oraz "sciezki do dzwiekow" - od tej pory sa to tylko dodatkowe sciezki 
