import/export KID-a
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2189 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -145,6 +145,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   nalezy skasowac sobie wszystkie wpisy z "sciezki do ikon" 
   oraz "sciezki do dzwiekow" - od tej pory sa to tylko dodatkowe sciezki 
   a nie wszystkie (pawel_p)
+* ³atka KID-a poprawiaj±ce wygl±d okna importu/exportu listy 
+  kontaków  (KID/michal)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
