--- a/ChangeLog
+++ b/ChangeLog
@@ -154,6 +154,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * reorganizacja zak³adki "Wygl±d" w konfiguracji (wed³ug pomys³u Arcisza)
   dodanie nowego "typu danych" do ConfigDialogu - ujednolicona obs³uga
   konfiguracji czcionek (joi)
+* obs³uga starego formatu kolorów w pliku konfiguracyjnym (joi)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
