--- a/ChangeLog
+++ b/ChangeLog
@@ -157,6 +157,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * obs³uga starego formatu kolorów w pliku konfiguracyjnym (joi)
 * ¼ród³a modu³ów rêcznie skopiowanych do katalogu modules nie s± usuwane
   przez mechanizm autodownload, maj± "wy¿szy priorytet" (adrian)
+* ======= FEATURE FREEZE =======
+  ale porz±dki jeszcze mo¿na robiæ (adrian)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
