--- a/THANKS
+++ b/THANKS
@@ -7,5 +7,8 @@ Krzysztof Godlewski
 Mariusz Witkowski
 Mateusz Papiernik
 Artur Zabroñski
+Marcin Ceglarek
+Rafa³ Malinowski
+Dariusz Arciszewski
 
 i inni...
