Dodany Piotr Simon do tłumaczy
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2208 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/AUTHORS
+++ b/AUTHORS
@@ -30,5 +30,5 @@ twórca projektu, programista, grafik
 =============================================================
 
 Adrian Smarzewski, Roman Krzystyniak - wersja polska
-Robert Kolatzek - wersja niemiecka
+Robert Kolatzek, Piotr Simon - wersja niemiecka
 Piotr Jedrysik - wersja w³oska
