next patch KID-a
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2210 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -159,6 +159,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   przez mechanizm autodownload, maj± "wy¿szy priorytet" (adrian)
 * ======= FEATURE FREEZE =======
   ale porz±dki jeszcze mo¿na robiæ (adrian)
+* nastêpny patch KID-a tym razem na okno edycji kontaktu (KID/michal)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
