--- a/ChangeLog
+++ b/ChangeLog
@@ -160,6 +160,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * ======= FEATURE FREEZE =======
   ale porz±dki jeszcze mo¿na robiæ (adrian)
 * nastêpny patch KID-a tym razem na okno edycji kontaktu (KID/michal)
+* konfiguracja pionowego suwaka w panelu (joi)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
