KID - okno ignorowanych
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2215 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -161,6 +161,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   ale porz±dki jeszcze mo¿na robiæ (adrian)
 * nastêpny patch KID-a tym razem na okno edycji kontaktu (KID/michal)
 * konfiguracja pionowego suwaka w panelu (joi)
+* znowu KID zrobi³ ³atke i znowu ja to wrzucam :), tym razem okno
+  ignorowanych  (KID/michal)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
