--- a/ChangeLog
+++ b/ChangeLog
@@ -163,6 +163,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * konfiguracja pionowego suwaka w panelu (joi)
 * znowu KID zrobi³ ³atke i znowu ja to wrzucam :), tym razem okno
   ignorowanych  (KID/michal)
+* patch joi - zawijanie statusow w oknie listy uzytkownikow (tomee)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
