obsługa precompiled headers gcc 3.4
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2221 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -165,6 +165,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   ignorowanych  (KID/michal)
 * patch joi - zawijanie statusow w oknie listy uzytkownikow (tomee)
 * przyspieszenie oko³o 2,5 raza prêdko¶ci zawijania opisów (joi)
+* eksperymentalna obs³uga prekompilowanych nag³ówków gcc 3.4 dla kadu-core,
+  domy¶lnie wy³±czona, wszak mamy feature freeze ;) (adrian)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
