--- a/ChangeLog
+++ b/ChangeLog
@@ -169,6 +169,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   domy¶lnie wy³±czona, wszak mamy feature freeze ;) (adrian)
 * KID - okno danych osobistych (KID/michal)
 * pi±ty patch porz±dkuj±cy vogela: edycja danych osobistych (adrian)
+* szybki fix Vogela na wyszukiwanie w katalogu tylko aktywnych (vogel/michal)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
