--- a/ChangeLog
+++ b/ChangeLog
@@ -173,6 +173,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * jesli sie ma ustawiony status niewidoczny z opisem to jest to prawid³owo
   wy¶wietlane (michal)
 * szósty patch porz±dkuj±cy vogela: pocz±tek porzadków w logowaniu (adrian)
+* obsluga klawisza esc w przerabianych przez kida oknach (KID/michal)
+
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
