--- a/ChangeLog
+++ b/ChangeLog
@@ -174,7 +174,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   wy¶wietlane (michal)
 * szósty patch porz±dkuj±cy vogela: pocz±tek porzadków w logowaniu (adrian)
 * obsluga klawisza esc w przerabianych przez kida oknach (KID/michal)
-
+* siódmy patch porz±dkuj±cy vogela: inicjalizacja proxy i dcc (adrian)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
