--- a/ChangeLog
+++ b/ChangeLog
@@ -184,6 +184,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * modu³y u¿ywaj± prekompilowanych nag³ówków z kadu-core (adrian)
 * poprawione filtrowanie wychodz±cych wiadomo¶ci przez modu³y (Googie/joi)
 * ostrze¿enie gdy przesy³ana wiadomo¶æ jest za d³uga (joi)
+* poprawka powy¿szej poprawki ;) (joi)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
