--- a/ChangeLog
+++ b/ChangeLog
@@ -190,6 +190,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   informacji, maskê ustawia siê jako zmienn± ¶rodowiskow± DEBUG_MASK,
   na razie tylko kilka plików przerobionych na nowy mechanizm (joi)
 * dziewi±ty patch porz±dkuj±cy vogela: walka z sygna³ami i slotami (adrian)
+* przemianowanie kdebug_mask na kdebugm
+  wszystkie modu³y korzystaj± z usprawnieñ mechanizmu debugowania (joi)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
