patch vogela - drobne porządki
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2262 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -192,6 +192,10 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dziewi±ty patch porz±dkuj±cy vogela: walka z sygna³ami i slotami (adrian)
 * przemianowanie kdebug_mask na kdebugm
   wszystkie modu³y korzystaj± z usprawnieñ mechanizmu debugowania (joi)
+* dziesi±ty patch porz±dkuj±cy vogela: drobne porz±dki (adrian)
+* ======= API FREEZE =======
+  zostanie wygenerowana dokumentacja api na stronie i kadu powinno ju¿ byæ z
+  ni± kompatybilne - modu³opisarze mog± szykowaæ finalne wersje modu³ów (adrian)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
