--- a/ChangeLog
+++ b/ChangeLog
@@ -195,7 +195,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dziesi±ty patch porz±dkuj±cy vogela: drobne porz±dki (adrian)
 * ======= API FREEZE =======
   zostanie wygenerowana dokumentacja api na stronie i kadu powinno ju¿ byæ z
-  ni± kompatybilne - modu³opisarze mog± szykowaæ finalne wersje modu³ów (adrian)
+  ni± kompatybilne - modu³opisarze mog± szykowaæ finalne wersje modu³ów (a
+* wszystkie pliki przerobione na nowy mechanizm debugowania (joi)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
