poprawiona wysokość pojedynczego elemntu listy kontaktów
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2270 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -201,6 +201,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniêcie paru ostrze¿eñ przy kompilacji zwi±zanych z porównywaniem liczb ca³kowitych
   ze znakiem i bez znaku (chilek)
 * po co u¿ywacie QString::latin1()?! (chilek)
+* poprawne ustawienie wysoko¶ci pojedynczego elementu listy kontaktów gdy obrazek
+  jest wiêkszy od czcionki (joi)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
