segfault przy zmianie altnicka
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2279 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -206,6 +206,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * obej¶cie b³êdu w niektórych stylach Qt (które zwracaj± zbyt du¿± szeroko¶æ
   scrollbara), powoduj±cych z³e wy¶wietlanie opisów pod kontaktami (joi)
 * zabezpieczenie przed zawieszeniem w zawijaniu opisów przy bardzo w±skim oknie (joi)
+* usuniêty segfault przy zmianie danych o kontakcie (joi)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
