--- a/ChangeLog
+++ b/ChangeLog
@@ -207,6 +207,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   scrollbara), powoduj±cych z³e wy¶wietlanie opisów pod kontaktami (joi)
 * zabezpieczenie przed zawieszeniem w zawijaniu opisów przy bardzo w±skim oknie (joi)
 * usuniêty segfault przy zmianie danych o kontakcie (joi)
+* w³asny opis w ToolTipie na li¶cie kontaktów po pierwszym prze³±czeniu siê ze
+  statusu niedostêpnego jest wy¶wietlany poprawnie (joi)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
