--- a/ChangeLog
+++ b/ChangeLog
@@ -212,6 +212,10 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodano obcinanie wyswietlanych linkow, konfigurowalne (tomee)
 * zawijanie d³ugich tekstów bez spacji w chacie/historii/panelu (joi)
 * nad odno¶nikami w oknie rozmowy pokazuj± siê dymki z ich pe³n± tre¶ci± (tomee)
+* poprawki w ³±czeniu z serwerami: przywrócone cykliczne ³±czenie, wszêdzie
+  dzia³aj± 5-cio sekundowe timeouty, informacje o b³êdach i timeoutach w
+  dymkach wraz z informacj± o serwerze z którym próbowa³o siê kadu po³±czyæ,
+  jednostajnie migaj±ce s³oneczko nios³o ze sob± zbyt ma³o informacji (adrian)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
