odświeżanie listy użytkowników w czasie konferencji przy włączonych opisach pod kontaktami
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2302 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -222,6 +222,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   userboksa przy wielokolumnowsej li¶cie kontaktów (joi)
 * drobne porz±dki, usuniêcie paru niepotrzebnych zmiennych, przeniesienie
   paru globalnych do klas, zmiana publicznych na prywatne, nazwy.. (adrian)
+* w konferencji od¶wie¿anie listy u¿ytkowników gdy w³±czone s± opisy pod kontaktami (joi)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
